# OSHTEN

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  recomendate.md  requirements.txt
core/: arbitrage_evaluator.py  base_ws_client.py  dry_executor.py  excange_bybit.py  excange_okx.py  exchange_bybit.py  exchange_okx.py  paper_trading.py  price_state.py  scanner.py
notifier/: telegram.py
